--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,9 @@ channels:
   - defaults
   - esri
 dependencies:
-  - python=3.8.8
-  - geopandas=0.9.0
-  - cartopy=0.18.0
-  - notebook=6.2.0
-  - rasterio=1.2.0
+  - python=3.9
+  - geopandas
+  - cartopy
+  - notebook
+  - rasterio
   - arcpy
